# api/openapi.yaml
@@ -2432,6 +2432,10 @@ paths:
           in: query
           schema:
             type: integer
+        - name: action
+          in: query
+          schema:
+            type: string
         - name: target_type
           in: query
           schema:
